name:              ywitter
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            tanakh
maintainer:        tanakh
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://ywitter.yesodweb.com/

Flag production
    Description:   Build the production executable.
    Default:       False

executable         ywitter-test
    if flag(production)
        Buildable: False
    main-is:       test.hs
    build-depends: base         >= 4       && < 5
                 , yesod        >= 0.7     && < 0.8
                 , yesod-auth
                 , yesod-static
                 , yesod-form
                 , mime-mail
                 , wai-extra
                 , directory
                 , bytestring
                 , text
                 , time
                 , uuid
                 , persistent
                 , persistent-sqlite
                 , template-haskell
                 , hamlet
                 , web-routes
                 , hjsmin
                 , transformers
                 , warp
    ghc-options:   -Wall -threaded

executable         ywitter-production
    if flag(production)
        Buildable: True
    else
        Buildable: False
    cpp-options:   -DPRODUCTION
    main-is:       production.hs
    ghc-options:   -Wall -threaded

executable         ywitter-devel
    if flag(production)
        Buildable: False
    main-is:       devel-server.hs
    ghc-options:   -Wall -O2 -threaded
